# ai-agentic-meeting-summarizer

./: .env.example  .gitignore  .hfignore  .pre-commit-config.yaml  README.md  agent.py  main.ipynb  main.py  pyproject.toml  requirements.in  requirements.txt  setup.cmd  ui.py
config/: __init__.py  settings.py
models/: meeting_schema.py
scripts/: setup.ps1  setup.sh
tools/: __init__.py  speechToTextTool.py  summaryTool.py  textRefiningTool.py
utils/: file_utils.py  getMarkdown.py  logging_config.py  openai_client.py  textToSpeech.py
